# gnssir-workflow

./: .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  EARTHSCOPE_INTEGRATION_PLAN.md  INSTALL.md  METHODOLOGY.md  README.md  dashboard.py  enhanced_dashboard_v4.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: fora_params.json  glbx.json  kefj.json  stations_config.json  stations_config_template.json  tool_paths.json  valr.json
dashboard_components/: __init__.py  analysis_runner.py  cache_manager.py  constants.py  data_loader.py  station_metadata.py
dashboard_components/tabs/: __init__.py  diagnostics_tab.py  monthly_data_tab.py  overview_tab.py  subdaily_tab.py  yearly_residual_tab.py
docs/: ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  METHODOLOGY.md  PROCESSING_EXAMPLE.md  params_reference.md
scripts/: __init__.py  compare_reference_distances.py  coops_comparison.py  create_polar_animation.py  find_reference_stations.py  generate_erddap_matched.py  multi_source_comparison.py  plot_resolution_comparison.py  process_station.py  reflector_height_utils.py  results_handler.py  run_daily.sh  run_gnssir_processing.py  search_erddap_stations.py  time_lag_analyzer.py  usgs_comparison.py  usgs_comparison_analyzer.py  usgs_data_handler.py  usgs_gauge_finder.py  usgs_progressive_search.py
scripts/core_processing/: __init__.py  config_loader.py  daily_gnssir_worker.py  parallel_orchestrator.py  workspace_setup.py
scripts/external_apis/: __init__.py  ndbc_client.py  noaa_coops.py
scripts/external_tools/: __init__.py  gnssrefl_executor.py  preprocessor.py
scripts/utils/: __init__.py  data_manager.py  geo_utils.py  gnssir_loader.py  logging_config.py  segmented_analysis.py  visualizer.py
scripts/visualizer/: __init__.py  advanced_viz.py  base.py  comparison.py  comparison_plots.py  dashboard_plots.py  lag_analyzer.py  meteo_integration.py  publication_theme.py  segmented_viz.py  tide_integration.py  timeseries.py
tests/: __init__.py  conftest.py  test_comparison_plots.py  test_coops_comparison.py  test_core_utils.py  test_environment.py  test_find_reference_stations.py  test_process_station.py  test_reference_sources.py  test_usgs_comparison.py
tests/fixtures/: sample_comparison.csv  sample_coops_comparison.csv  sample_coops_matched.csv  sample_gnssir_raw.csv  sample_subdaily_matched.csv  sample_usgs_comparison.csv  sample_usgs_matched.csv
